--- a/main.css
+++ b/main.css
@@ -2,9 +2,10 @@ body,table,h1,h2,form,ul,li{margin:0;padding:0;font-family: Arial, Helvetica, sa
 body,tfoot{background:white;color:#555753;text-align:center;}
 a{color:#3465a4;}
 a:visited{color:#75507b;}
-a:hover{color:#c00;}
+a:hover,.update a{color:#c00;}
 col.stats{width:10%;border-left:1px solid #d3d7cf;}
-h1{font-size:1.5em;padding:0.5em 0;}
+h1{font-size:1.5em;}
+h1,.update{padding:0.5em 0;}
 h2{font-size:1em;background:#555753;}
 h2,table{border:1px solid #2e3436;}
 table{width:100%;margin-bottom:1.5em;border-collapse:collapse;}
@@ -19,13 +20,14 @@ tbody th,tfoot td,.stats td,.stats th{text-align:right;}
 #footer,#navigation{padding:0.3em 0.5em;}
 #footer{background:#2e3436;text-align:center;}
 #footer,#footer a,h2{color:white;}
-#navigation{list-style:none;border-top:1px solid #2e3436;}
-#navigation li{padding:0 1em;display:inline;font-weight:bold;}
+#navigation{list-style:none;}
+#navigation,.update{border-top:1px solid #2e3436;}
+#navigation li{padding:0 1em;display:inline;}
 .flags{width:11px;}
 .ips{width:9em;}
 .ports{width:4em;}
 .ages{width:5em;}
 .timestamps{width:10em;}
-.empty{font-weight:bold;}
+.empty,.update a,#navigation li{font-weight:bold;}
 .odd{background:#fff;}
 .even{background:#eeeeec;}
