--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body,table,h1,h2,form,ul,li{margin:0;padding:0;font-family: Arial, Helvetica, sans-serif;}
+body,table,h1,h2,form,ul,li{margin:0;padding:0;font-family:Arial, Helvetica, sans-serif;}
 body,tfoot{background:white;color:#555753;text-align:center;}
 a{color:#3465a4;}
 a:visited{color:#75507b;}
@@ -12,7 +12,6 @@ table{width:100%;margin-bottom:1.5em;border-collapse:collapse;}
 thead,tr.caption{background:#2e3436;color:white;}
 th,td{text-align:left;}
 th,td,h2{padding:0.3em 0.5em;}
-tr.caption th{text-align:center;}
 tfoot td{border-top:1px solid #babdb6;}
 tbody th,tbody td{border-top: 1px solid #d3d7cf;}
 tbody th,tfoot td,.stats td,.stats th{text-align:right;}
@@ -23,6 +22,7 @@ tbody th,tfoot td,.stats td,.stats th{text-align:right;}
 #navigation{list-style:none;}
 #navigation,.update{border-top:1px solid #2e3436;}
 #navigation li{padding:0 1em;display:inline;}
+.caption th{text-align:center;}
 .flags{width:11px;}
 .ips{width:9em;}
 .ports{width:4em;}
