--- a/trunk/main.css
+++ b/trunk/main.css
@@ -1,5 +1,6 @@
 body,table,h1,h2,form,ul,li{margin:0;padding:0;font-family:Arial, Helvetica, sans-serif;}
-body,tfoot{background:white;color:#555753;text-align:center;}
+body,tfoot{color:#555753;}
+body,tfoot,.odd{background:#fff;}
 a{color:#3465a4;}
 a:visited{color:#75507b;}
 a:hover,.update a{color:#c00;}
@@ -7,27 +8,24 @@ col.stats{width:10%;border-left:1px solid #d3d7cf;}
 h1{font-size:1.5em;}
 h1,.update{padding:0.5em 0;}
 h2{font-size:1em;background:#555753;}
-h2,table{border:1px solid #2e3436;}
-table{width:100%;margin-bottom:1.5em;border-collapse:collapse;}
-thead,tr.caption{background:#2e3436;color:white;}
+table{width:100%;border-collapse:collapse;}
+thead,tr.caption,#footer{background:#2e3436;}
 th,td{text-align:left;}
-th,td,h2{padding:0.3em 0.5em;}
+th,td,h2,#footer,#navigation{padding:0.3em 0.5em;}
 tfoot td{border-top:1px solid #babdb6;}
-tbody th,tbody td{border-top: 1px solid #d3d7cf;}
+tbody th,tbody td{border-top:1px solid #d3d7cf;}
 tbody th,tfoot td,.stats td,.stats th{text-align:right;}
 #main{margin:0 auto 1em;min-width:40em;max-width:60em;}
-#footer,#navigation{padding:0.3em 0.5em;}
-#footer{background:#2e3436;text-align:center;}
-#footer,#footer a,h2{color:white;}
+#footer,#footer a,h2,thead,tr.caption{color:#fff;}
+#footer,body,tfoot,.caption th{text-align:center;}
 #navigation{list-style:none;}
 #navigation,.update{border-top:1px solid #2e3436;}
 #navigation li{padding:0 1em;display:inline;}
-.caption th{text-align:center;}
+.network{border:1px solid #2e3436;margin-bottom:1.5em;}
 .flags{width:11px;}
 .ips{width:9em;}
 .ports{width:4em;}
 .ages{width:5em;}
 .timestamps{width:10em;}
-.empty,.update a,#navigation li{font-weight:bold;}
-.odd{background:#fff;}
+.empty,.update a,#navigation{font-weight:bold;}
 .even{background:#eeeeec;}
